remove csrf filters and add second input field.

--- a/app/views/connect4.scala.html
+++ b/app/views/connect4.scala.html
@@ -25,7 +25,8 @@
             <p>Please enter your name.</p>
             <form action="/games/@id/init" method="post">
                 <label for="inputfield">Ihre Eingabe:</label>
-                <input type="text" id="inputField" name="inputField"></input>
+                <input type="text" id="inputField1" name="inputField1"></input>
+                <input type="text" id="inputField2" name="inputField2"></input>
                 <input type="submit" value="Submit">
             </form>
         } else {
